--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.7.1",
+    "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -20,6 +22,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
   },
