--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.7.1",
+    "@tanstack/react-table": "^8.10.7",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
